--- a/frontend-gestion-inventario/src/app/components/layout/header/header.component.html
+++ b/frontend-gestion-inventario/src/app/components/layout/header/header.component.html
@@ -2,8 +2,8 @@
     <!-- Barra de navegación -->
     <nav class="nav-bar">
         <ul>
-            <li><a href="#inicio">Inicio</a></li>
-            <li><a href="#acerca-de">Acerca de</a></li>
+            <li><a href="#inicio">Home</a></li>
+            <li><a href="#acerca-de">About</a></li>
         </ul>
     </nav>
     <!-- Sección de usuario con el ícono a la derecha -->
