--- a/frontend-gestion-inventario/src/app/components/categoria/mostrar-categoria/mostrar-categoria.component.html
+++ b/frontend-gestion-inventario/src/app/components/categoria/mostrar-categoria/mostrar-categoria.component.html
@@ -1,12 +1,12 @@
 <p-card class="w-full h-full shadow-lg border-rounded">
     <ng-template pTemplate="header">
       <div class="flex justify-content-between items-center">
-        <h3 class="ml-4 text-xl font-semibold text-gray-800">Registro de Categorías</h3>
+        <h3 class="ml-4 text-xl font-semibold text-gray-800">Category Registration</h3>
         <div class="mt-2 mr-2">
           <a 
             pButton 
             pRipple
-            label="Crear Categoría" 
+            label="Create Category" 
             icon="pi pi-user-plus"
             class="bg-cyan-600 text-white hover:bg-cyan-700 px-4 py-2 rounded-md"
             [ngStyle]="{'text-decoration': 'none'}" 
@@ -20,15 +20,15 @@
       <p-table [value]="categorias" class="custom-table" [rows]="10" [paginator]="true" [responsive]="true">
         <ng-template pTemplate="header">
           <tr>
-            <th class="p-text-center">Nombre</th>
-            <th class="p-text-center">Descripción</th>
-            <th class="p-text-center">Acciones</th>
+            <th class="p-text-center">Name</th>
+            <th class="p-text-center">Description</th>
+            <th class="p-text-center">Actions</th>
           </tr>
         </ng-template>
         <ng-template pTemplate="body" let-categorias>
           <tr>
-            <td>{{ categorias.nombre }}</td>
-            <td>{{ categorias.descripcion }}</td>
+            <td>{{ categorias.name }}</td>
+            <td>{{ categorias.description }}</td>
             <td class="flex justify-content-center space-x-2">
               <a 
                 pButton 
