--- a/frontend-gestion-inventario/src/app/components/cliente/actualizar-cliente/actualizar-cliente.component.html
+++ b/frontend-gestion-inventario/src/app/components/cliente/actualizar-cliente/actualizar-cliente.component.html
@@ -1,73 +1,65 @@
-<p-card header="Actualizar Clientes"  [style]="{ width: '100%' }">
-    <ng-template pTemplate="header">
+<p-card header="Update Customers" [style]="{ width: '100%' }">
+  <ng-template pTemplate="header">
+  </ng-template>
+  <div>
+    <form [formGroup]="form" novalidate (ngSubmit)="onSubmit()" class="p-3 bg-faded">
 
-    </ng-template>
-    <div>
-      <form [formGroup]="form" novalidate (ngSubmit)="onSubmit()" class="p-3 bg-faded">
-
-
-        <div class="grid">
-          <div class="col-12 sm:col-6">
-              <div class="p-inputgroup mb-1">
-                  <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
-                  <input class="w-12" type="text" pInputText formControlName="nombre" placeholder="Nombre Cliente"  title="Nombre Cliente">         
-              </div>
-          </div>
-
-          <div class="col-12 sm:col-6">
-            <div class="p-inputgroup mb-1 ">
-                  <span class="p-inputgroup-addon"><i class="pi pi-wallet"></i></span>
-                  <input class="w-12" type="text" pInputText formControlName="direccion" placeholder="direccion Cliente" title="Direccion Cliente" >          
+      <div class="grid">
+        <div class="col-12 sm:col-6">
+            <div class="p-inputgroup mb-1">
+                <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
+                <input class="w-12" type="text" pInputText formControlName="name" placeholder="Customer Name" title="Customer Name">         
             </div>
-          </div>
-
         </div>
 
-        <div class="grid">
-          <div class="col-12 sm:col-6">
-              <div class="p-inputgroup mb-1">
-                  <span class="p-inputgroup-addon"><i class="pi pi-phone"></i></span>
-                  <input class="w-12" type="text" pInputText formControlName="telefono" placeholder="Telefono Cliente"  title="Telefono Cliente">         
-              </div>
+        <div class="col-12 sm:col-6">
+          <div class="p-inputgroup mb-1">
+                <span class="p-inputgroup-addon"><i class="pi pi-wallet"></i></span>
+                <input class="w-12" type="text" pInputText formControlName="address" placeholder="Customer Address" title="Customer Address">          
           </div>
+        </div>
+      </div>
 
-          <div class="col-12 sm:col-6">
-            <div class="p-inputgroup mb-1 ">
-                  <span class="p-inputgroup-addon"><i class="pi pi-bookmark"></i></span>
-                  <input class="w-12" type="email" pInputText formControlName="email" placeholder="E-mail Cliente" title="E-mail Cliente" >          
+      <div class="grid">
+        <div class="col-12 sm:col-6">
+            <div class="p-inputgroup mb-1">
+                <span class="p-inputgroup-addon"><i class="pi pi-phone"></i></span>
+                <input class="w-12" type="text" pInputText formControlName="phone" placeholder="Customer Phone" title="Customer Phone">         
             </div>
+        </div>
+
+        <div class="col-12 sm:col-6">
+          <div class="p-inputgroup mb-1">
+                <span class="p-inputgroup-addon"><i class="pi pi-bookmark"></i></span>
+                <input class="w-12" type="email" pInputText formControlName="email" placeholder="Customer E-mail" title="Customer E-mail">          
           </div>
         </div>
+      </div>
 
+      <div class="flex justify-content-center flex-wrap">
+        <button 
+                    pButton 
+                    pRipple
+                    label="Save"
+                    icon="pi pi-save"
+                    severity="info"
+                    class="mr-4"
+                    type="submit"
+        ></button>
 
-        <div class="flex justify-content-center flex-wrap">
-          <button 
-                      pButton 
-                      pRipple
-                      label="Guardar"
-                      icon="pi pi-save"
-                      severity="info"
-                      class="mr-4"
-                      type="submit"
-          ></button>
-
-          <button 
-                      pButton 
-                      pRipple
-                      label="Cancelar"
-                      icon="pi pi-times-circle"
-                      severity="warning"
-                      class="mr-4"
-                      type="button"
-                      (click)="cancel()"
-          ></button>
-        </div>
-
-
-      </form> 
-
-    </div>
-    <ng-template pTemplate="footer">
-
-    </ng-template>
-  </p-card>
+        <button 
+                    pButton 
+                    pRipple
+                    label="Cancel"
+                    icon="pi pi-times-circle"
+                    severity="warning"
+                    class="mr-4"
+                    type="button"
+                    (click)="cancel()"
+        ></button>
+      </div>
+    </form> 
+  </div>
+  <ng-template pTemplate="footer">
+  </ng-template>
+</p-card>
