--- a/frontend-gestion-inventario/src/app/components/inventarios/crear-inventario/crear-inventario.component.html
+++ b/frontend-gestion-inventario/src/app/components/inventarios/crear-inventario/crear-inventario.component.html
@@ -1,57 +1,57 @@
-<p-card header="Crear inventarios" [style]="{ width: '100%'}">
+<p-card header="Create Inventory" [style]="{ width: '100%'}">
   <ng-template pTemplate="header"></ng-template>
   <div>
     <form [formGroup]="inventarioForm" novalidate (ngSubmit)="crearInventario()" class="p-3 bg-faded">
       <div class="grid">
-        <!-- Campo Producto -->
+         <!-- Product Field -->
         <div class="col-12 sm:col-6">
           <div class="p-inputgroup mb-1">
             <span class="p-inputgroup-addon"><i class="pi pi-box"></i></span>
             <p-treeSelect
               class="md:w-10rem w-12"
               containerStyleClass="w-12"
-              [options]="Product"
-              formControlName="producto"
-              placeholder="Seleccione un producto"
+              [options]="Products"
+              formControlName="product"
+              placeholder="Select a product"
               [showClear]="true"
               selectionMode="single">
             </p-treeSelect>
           </div>
         </div>
 
-        <!-- Campo Entrada/Salida -->
+       <!-- Movement Type Field -->
         <div class="col-12 sm:col-6">
           <div class="p-inputgroup mb-1">
             <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
-            <input pInputText id="tipo_movimiento" formControlName="tipo_movimiento" placeholder="Entrada/Salida" />
+            <input pInputText id="movement_type" formControlName="movement_type" placeholder="Input/Output" />
           </div>
         </div>
 
-        <!-- Campo Cantidad -->
+        <!-- Quantity Field -->
         <div class="col-12 sm:col-6">
           <div class="p-inputgroup mb-1">
             <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
-            <input pInputText id="cantidad" formControlName="cantidad" type="number" placeholder="Cantidad" />
+            <input pInputText id="quantity" formControlName="quantity" type="number" placeholder="Quantity" />
           </div>
         </div>
 
-        <!-- Campo Fecha de Movimiento -->
+        <!-- Movement Date Field -->
         <div class="col-12 sm:col-6">
           <div class="p-inputgroup mb-1">
             <span class="p-inputgroup-addon"><i class="pi pi-fw pi-calendar"></i></span>
-            <input pInputText id="fecha_movimiento" formControlName="fecha_movimiento" type="date" />
+            <input pInputText id="movement_date" formControlName="movement_date" type="date" />
           </div>
         </div>
 
-        <!-- Campo Observaciones -->
+        <!-- Remarks Field -->
         <div class="col-12 sm:col-12">
           <div class="p-inputgroup mb-3">
             <span class="p-inputgroup-addon"><i class="pi pi-book"></i></span>
             <textarea
               pInputTextarea
-              id="observaciones"
-              formControlName="observaciones"
-              placeholder="Escribe aquí tus observaciones"
+              id="remarks"
+              formControlName="remarks"
+              placeholder="Write your remarks here"
               rows="5"
               class="observaciones-textarea p-inputtext w-full"
             ></textarea>
@@ -61,8 +61,8 @@
 
       <!-- Botones Guardar y Cancelar -->
       <div class="flex justify-content-center flex-wrap">
-        <button pButton pRipple label="Guardar" icon="pi pi-save" severity="info" class="mr-4" type="submit"></button>
-        <button pButton pRipple label="Cancelar" icon="pi pi-times-circle" severity="warning" class="mr-4" type="button" routerLink="/inventarios"></button>
+        <button pButton pRipple label="Save" icon="pi pi-save" severity="info" class="mr-4" type="submit"></button>
+        <button pButton pRipple label="Cancel" icon="pi pi-times-circle" severity="warning" class="mr-4" type="button" routerLink="/inventarios"></button>
       </div>
     </form>
   </div>
